# kunlian_gas_system_260708

./: .gitignore  AGENTS.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
docs/: account-delivery.md  api-conventions.md  backend-standards.md  database-conventions.md  frontend-conventions.md  license-keygen.md  release-notes.md  security-policy.md  ui-design-system.md  ui-function-audit.md
packaging/: README.md  app.spec  smoke_test.ps1
scripts/: format.ps1  license-keygen.ps1  lint.ps1  python.ps1  run.ps1  test.ps1
tests/: __init__.py  qt_test_harness.py  test_000_qt_test_harness.py  test_acquisition_alarm_linkage.py  test_api_host_router.py  test_api_read_model.py  test_app_main_wiring.py  test_auth_users_permissions_license.py  test_backup_restore_service.py  test_bigscreen_service.py  test_chart_records.py  test_device_configuration.py  test_license_keygen_tool.py  test_login_preferences.py  test_maintenance_reminders.py  test_map_monitoring_service.py  test_packaging_runtime.py  test_platform_runtime.py  test_protocol_adaptation_debug.py  test_shared_common_services.py  test_shared_device_contracts.py  test_ui_backup_restore_page.py  test_ui_bigscreen_window.py  test_ui_chart_page.py  test_ui_common_widgets.py  test_ui_desktop_shell.py  test_ui_device_cards_page.py  test_ui_device_configuration.py  test_ui_device_debug.py  test_ui_global_foundation.py  test_ui_linkage_page.py  test_ui_local_api_page.py  test_ui_login_license.py  test_ui_maintenance_page.py  test_ui_map_monitoring.py  test_ui_monitoring_page.py  (+2 more)
(+171 files in other folders)
